--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,10 @@
     "@testing-library/react": "^15.0.7",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "just-debounce-it": "^3.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
